--- a/src/components/Cell/Cell.module.css
+++ b/src/components/Cell/Cell.module.css
@@ -12,12 +12,16 @@
   background-color: rgb(255, 200, 128);
 }
 
-.tip::before {
+.hint {
+  cursor: pointer;
+}
+
+.hint::before {
   content: '';
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgb(136, 255, 100, 0.5);
+  background-color: rgba(162, 255, 100, 0.342);
 }
